# windsurf-throttle

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
src/windsurf_throttle/: __init__.py  api.py  app.py  cli.py
tests/: __init__.py  test_api.py
